Fix expression comparator spacing

--- a/app/views/ReportView/components/GenomicSummary/index.scss
+++ b/app/views/ReportView/components/GenomicSummary/index.scss
@@ -558,6 +558,7 @@ section {
         font-size: 0.9em;
         text-align: center;
         padding: 20px 0;
+        justify-content: space-around;
         
         div {
           padding: 0 5px;
